# 1DCDSolver

./: CMakeLists.txt  README.md  cd1ddata.cpp  cd1ddata.h  cd1dinterface.cpp  cd1dinterface.cpp.autosave  cd1dinterface.h  cd1dinterface.h.autosave  cd1dparameter.cpp  cd1dparameter.h  cd1dsolver.cpp  cd1dsolver.h  main.cpp  parameter.cpp  parameter.h
